# CppNotePad

./: .gitignore  CMakeLists.txt  README.md
Tests/: CMakeLists.txt  CppNotePadTests.cpp
src/: main.cpp
src/fileOperationsClass/: fileOperations.cpp  fileOperations.hpp
src/notepadClass/: notepad.cpp  notepad.hpp
